2025-05-aks-web-app-addon/manifests/aks-hello-world.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  namespace: hello-web-app-routing
spec:
  ingressClassName: nginx-public
  rules:
    - host: app.sometestcustomdomain.com
      http:
        paths:
          - backend:
              service:
                name: aks-helloworld
                port:
                  number: 80
            path: /
            pathType: Prefix
